unpackaged/main/default/objects/Contact/fields/Date_2__c.field-meta.xml
<CustomField>
    <fullName>Date_2__c</fullName>
    <label>Date 2</label>
    <type>Date</type>
</CustomField>