unpackaged/main/default/objects/Contact/fields/Imported_By__c.field-meta.xml
<CustomField>
    <fullName>Imported_By__c</fullName>
    <label>Imported By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By DataLoader</fullName>
            </value>
            <value>
                <fullName>By Workbench</fullName>
            </value>
            <value>
                <fullName>By Jitterbit</fullName>
            </value>
            <value>
                <fullName>By Dell Boomi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>