unpackaged/main/default/objects/Contact/validationRules/Digits_greater_than_equal_to_ten.validationRule-meta.xml
<ValidationRule>
    <fullName>Digits_greater_than_equal_to_ten</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(Phone) &lt; 10</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Length of phone number should be greater than or equal to 10.</errorMessage>
</ValidationRule>