unpackaged/main/default/objects/Contact/validationRules/Other_number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_number_validation</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( OtherPhone ) &lt; 10</errorConditionFormula>
    <errorMessage>Length of the field should be equal or greater than 10</errorMessage>
</ValidationRule>